@@ -1,3 +1,7 @@
+2013-03-22  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding Particle::fromDecay() method.
+
 2013-03-09  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Version bump to 2.0.0b1 in anticipation of first beta release.
